# substreams-sink-message

./: .gitignore  Cargo.toml  README.md  substreams.yaml
.github/workflows/: release.yml
proto/: winston.proto
src/: helpers.rs  lib.rs  logger.rs  meta.rs
src/pb/: pinax.substreams.sink.winston.v1.rs
