[package]
name = "substreams-sink-winston"
version = "0.1.2"
authors = ["Denis <denis@pinax.network>", "Yaro <yaro@pinax.network>", "Etienne <etinne@pinax.network>"]
description = "Substreams Winston Logger sink module"
homepage = "https://github.com/pinax-network/substreams-sink-winston"
repository = "https://github.com/pinax-network/substreams-sink-winston"
readme = "README.md"
keywords = [ "substreams", "streamingfast", "firehose", "thegraph", "pinax"]
categories = ["api-bindings", "external-ffi-bindings", "wasm"]
license = "MIT OR Apache-2.0"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
prost = "0.11"
prost-types = "0.11"
